# simpy-playground

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/simpy_playground/: __init__.py  __main__.py  version.py
tests/: test_main.py
